Scratch that, I fixed the horizontal scroll by adding an overflow-x attribute to the body.

--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@
 
 body {
   font-family: montserrat;
+  overflow-x: hidden;
 }
 
 .capitalize {
